tests/fail/repeat_option_2.stderr
error: repeated option: `autoref`

  = note: previously occurs here

 --> $DIR/repeat_option_2.rs:6:33
  |
6 | #[impl_op(autoref, commutative, autoref)]
  |                                 ^^^^^^^
